VERSION         DESCRIPTION
-----------------------------------------------------------------------------
              - skyped now automatically reconnects on Skype restarts
0.1.0         - initial release
              - see README for major features